fix spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,7 @@
 /* css start here */
 
-* {box-sizing: border-box;}
+* {box-sizing: border-box;
+}
 
 body {
       font-family: "Montserrat", "Open Sans", Helvetica, Arial, sans-serif;
@@ -33,8 +34,7 @@ p {
 
 /* TODO: size images manually so this is not necessary */
 img {
-  max-height: 20rem; 
-/*  border-style: double; for some reason not able to add borders*/
+  max-height: 50vmin; 
 }
 
 /***************** NAV *****************/
